--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,2 @@
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-node_modules/
 
-# Shopify CLI files
-.shopify/
-
-## Release files
-release
-*.zip
+node_modules
